Add simpleusb configuration to bootstrap options

--- a/sample_bootstrap/bootstrap.conf
+++ b/sample_bootstrap/bootstrap.conf
@@ -48,6 +48,23 @@ SAY_IP_AT_BOOT="enabled"
 # private node? 
 PRIVATE_NODE=0
 
+####################
+# SimpleUSB config #
+####################
+
+EEPROM=1
+RXBOOST=0
+CARRIERFROM=usb
+CTCSSFROM=usbinvert
+INVERTPTT=1
+PLFILTER=yes
+DEEMPHASIS=no
+PREEMPHASIS=no
+RXAUDIODELAY=4
+
+TPL["simpleusb.conf"]="/etc/asterisk/simpleusb.conf"
+TPL["cur_simple_usb.conf"]="/usr/local/etc/cur_simple_usb.conf"
+
 # copy in our customized? rpt template files:
 STATIC["extensions.conf_tpl"]="/usr/local/etc/asterisk_tpl/extensions.conf_tpl";
 STATIC["iax.conf_tpl"]="/usr/local/etc/asterisk_tpl/iax.conf_tpl";
@@ -66,7 +83,6 @@ STATIC["triple_tone_low.ulaw"]="/var/lib/asterisk/sounds/triple_tone_low.ulaw"
 
 # These are the config files which we will configure; our bootstrap script
 # will run the updates needed afterwords to configure these
-TPL["cur_simple_usb.conf"]="/usr/local/etc/cur_simple_usb.conf"
 TPL["allstar_node_info.conf"]="/usr/local/etc/allstar_node_info.conf"
 TPL["allstar.env"]="/usr/local/etc/allstar.env"
 
