--- a/sample_bootstrap/templates/cur_simple_usb.conf
+++ b/sample_bootstrap/templates/cur_simple_usb.conf
@@ -1,12 +1,12 @@
 [current]
 description="Generic Default Settings"
-eeprom=1
-rxboost=0
-carrierfrom=usb
-ctcssfrom=usbinvert
-invertptt=1
-plfilter=yes
-deemphasis=no
-preemphasis=no
-rxaudiodelay=4
+eeprom=${EEPROM}
+rxboost=${RXBOOST}
+carrierfrom=${CARRIERFROM}
+ctcssfrom=${CTCSSFROM}
+invertptt=${INVERTPTT}
+plfilter=${PLFILTER}
+deemphasis=${DEEMPHASIS}
+preemphasis=${PREEMPHASIS}
+rxaudiodelay=${RXAUDIODELAY}
 [current_end]
