Make configuring allstar optional

--- a/sample_bootstrap/bootstrap.conf
+++ b/sample_bootstrap/bootstrap.conf
@@ -17,6 +17,9 @@ TIMEZONE="America/Denver"
 # Allstar Node Config #
 #######################
 
+# Set to 1 if you want the allstar configuration to be regenerated
+CONFIGURE_ALLSTAR=true
+
 # Allstar Node #:
 NODE1=44068
 # Allstar node password
@@ -34,6 +37,11 @@ IDREC="|i${STNCALL}/L"
 # 0, 1, 2, 3, 4 duplex mode; see app_rpt docs for details. Normal repeater is '2', full duplex w/out
 # repeating audio from main input is "3"
 DUPLEX="2"
+
+
+############################
+# Allstar.env extra config #
+############################
 
 # The start delay prior to starting asterisk
 START_DELAY=0
